crates/ddlog-syntax/tests/validation/fail/too_many_function_arg_commas.rast
ROOT@0..86
  COMMENT@0..50 "// kind:item validate ..."
  WHITESPACE@50..51 "\n"
  ERROR@51..86
    IDENT@51..59 "function"
    WHITESPACE@59..60 " "
    IDENT@60..63 "foo"
    L_PAREN@63..64 "("
    IDENT@64..67 "foo"
    COLON@67..68 ":"
    WHITESPACE@68..69 " "
    IDENT@69..72 "Bar"
    COMMA@72..73 ","
    COMMA@73..74 ","
    WHITESPACE@74..75 " "
    IDENT@75..78 "bar"
    COLON@78..79 ":"
    WHITESPACE@79..80 " "
    IDENT@80..83 "Baz"
    R_PAREN@83..84 ")"
    WHITESPACE@84..85 " "
    L_CURLY@85..86 "{"
--
Error: expected a top-level item
   ,-[validation/fail/too_many_function_arg_commas.dl:2:1]
   |
 2 | function foo(foo: Bar,, bar: Baz) {}
   : ^^^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^^^  
   :                  `------------------- expected a top-level item
---'
--
// kind:item validate:true pass:false ignore:false
function foo(foo: Bar,, bar: Baz) {}
